# superApp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  README.md  build_log.txt  encryption.key  identity.pem  store.db  test_output.txt
.github/: labels.yml
.github/workflows/: build-windows.yml  sync-labels.yml
assets/: main.css  tailwind.css
plan/: Chunk Replication Algorithm.md  Cryptographic Scheme.md  DAG Schema.md  Mobile App Architecture.md  Networking Framework Goals.md  P2P Superapp Architecture Plan.md  Proof-of-Humanity Flow.md  Protocol Specification.md  Tokenomics.md  plan.md
src/: main.rs
src/backend/: dag.rs  identity.rs  mod.rs  network.rs  store.rs  vm.rs  wasm.rs
src/components/: browser_page.rs  common.rs  education_page.rs  geohash_page.rs  governance_page.rs  homePage.rs  home_page.rs  marketplace_page.rs  messagingPage.rs  messaging_page.rs  mod.rs  navBar.rs  nav_bar.rs  profile_page.rs  smart_contracts_page.rs  superweb_shell.rs  transparency_page.rs  verification_page.rs
