[package]
name = "super-app"
version = "0.1.0"
authors = ["Pietro Barozzi <pietroelaura@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "=0.7.0", features = ["router", "fullstack"] }
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "macros", "tokio", "mdns", "gossipsub", "request-response", "cbor", "kad"] }
tokio = { version = "1.36", features = ["sync", "macros", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
geohash = "0.13"
aes-gcm = "0.10.3"
rand = "0.8.5"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
curve25519-dalek = "4.1.3"
getrandom = { version = "0.2", features = ["js"] }
getrandom-03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasmi = "0.31"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
base64 = "0.21"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[dev-dependencies]
tempfile = "3.10.0"
